navbar: Fix overlap of search query and X.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1877,7 +1877,7 @@ nav a .no-style {
         height: 40px;
         padding: 0px;
         padding-left: 35px;
-        padding-right: 20px;
+        padding-right: 40px;
         border: none;
         border-radius: 0px;
         font-family: 'Source Sans Pro';
